// Copyright 2019 Tencent Cloud authors.
//
// You may not use this file outside of Tencent Cloud project.

syntax = "proto3";
package api;

import "api/rpc_common.proto";

// This is auto generated proto file which defines common usage of rpc stubs including bellow stubs:
// Do not modify it unless you know what you are doing!!!
//
// +-----+-----------+----------------------------------------------+
// | No. |    Stub   |                 Description                  |
// +-----+-----------+----------------------------------------------+
// |  1  | GC        | Invoking GC for GoLang.                      |
// +-----+-----------+----------------------------------------------+
// |  2  | GetConfig | Dump Config in memory.                       |
// +-----+-----------+----------------------------------------------+
// |  3  | IsHealthy | By default, it will return "Healthy".        |
// +-----+-----------+----------------------------------------------+
// |  4  | Help      | List Stubs.                                  |
// +-----+-----------+----------------------------------------------+
// |  5  | Info      | Return CPU, Memory, RPC related information. |
// +-----+-----------+----------------------------------------------+
// |  6  | Log       | Set logging level.                           |
// +-----+-----------+----------------------------------------------+
// |  7  | Ping      | By default, it will return "Pong".           |
// +-----+-----------+----------------------------------------------+
// |  8  | Shutdown  | Stop main process.                           |
// +-----+-----------+----------------------------------------------+
//
service CommonService {
    // Invoking GC for GoLang.
    rpc GC(GCRequest) returns (GCResponse);

    // Dump Config in memory.
    rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);

    // By default, it will return "Healthy".
    rpc IsHealthy(IsHealthyRequest) returns (IsHealthyResponse);

    // List Stubs.
    rpc Help(HelpRequest) returns (HelpResponse);

    // Return CPU, Memory, RPC related information.
    rpc Info(InfoRequest) returns (InfoResponse);

    // Set logging level.
    rpc Log(LogRequest) returns (LogResponse);

    // Set logging level.
    rpc Ping(PingRequest) returns (PingResponse);

    // Stop main process.
    rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

message GCRequest {
    RequestHeader header = 1;
}

message GCResponse {
    ResponseHeader header = 1;
    string         message = 2;
}

message GetConfigRequest {
    RequestHeader header = 1;
}

message GetConfigResponse {
    ResponseHeader header = 1;
    string         message = 2;
}

message IsHealthyRequest {
    RequestHeader header = 1;
}

message IsHealthyResponse {
    ResponseHeader header = 1;
    string         message = 2;
}

message HelpRequest {
    RequestHeader header = 1;
}

message HelpResponse {
    ResponseHeader header = 1;
    string         message = 2;
}

message InfoRequest {
    RequestHeader header = 1;
}

message InfoResponse {
    ResponseHeader header = 1;
    string         message = 2;
}

message LogRequest {
    RequestHeader header = 1;
}

message LogResponse {
    ResponseHeader header = 1;
    string         message = 2;
}

message PingRequest {
    RequestHeader header = 1;
}

message PingResponse {
    ResponseHeader header = 1;
    string         message = 2;
}

message ShutdownRequest {
    RequestHeader header = 1;
}

message ShutdownResponse {
    ResponseHeader header = 1;
    string         message = 2;
}